--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-proxy/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-proxy/pom.xml
@@ -3,7 +3,13 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>${rootArtifactId}-proxy</artifactId>
+    <parent>
+        <artifactId>${rootArtifactId}</artifactId>
+        <groupId>${groupId}</groupId>
+        <version>${version}</version>
+    </parent>
+
+    <artifactId>${rootArtifactId}-proxy</artifactId>
 	<name>SORCER :: ${rootArtifactId} :: proxy</name>
 
 	<dependencies>
