--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
@@ -2,7 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>${rootArtifactId}-sui</artifactId>
+    <parent>
+        <artifactId>${rootArtifactId}</artifactId>
+        <groupId>${groupId}</groupId>
+        <version>${version}</version>
+    </parent>
+
+    <artifactId>${rootArtifactId}-sui</artifactId>
 	<name>SORCER :: ${rootArtifactId} :: service UI</name>
 
 	<dependencies>
@@ -11,11 +17,11 @@
 			<artifactId>${rootArtifactId}-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>${rootArtifactId}-proxy</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-ui</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
         <dependency>
             <groupId>net.jini.lookup</groupId>
             <artifactId>serviceui</artifactId>
