--- a/examples/ex6/ex6-cfg-one-bean/src/main/resources/arithmetic-bean.config
+++ b/examples/ex6/ex6-cfg-one-bean/src/main/resources/arithmetic-bean.config
@@ -36,7 +36,7 @@ sorcer.core.provider.ServiceProvider {
             	net.jini.lookup.ui.MainUI.ROLE,
 				new UIComponentFactory(
 					new URL[]{
-						new URL(SorcerEnv.getWebsterUrl() + "/" + Resolver.resolveRelative(Artifact.sorcer("ex6-sui")) + "/calculator-ui.jar")
+						new URL(SorcerEnv.getWebsterUrl() + "/" + Resolver.resolveRelative(Artifact.sorcer("ex6-sui")))
 					},
 					"sorcer.arithmetic.provider.ui.CalculatorUI"
 				)
