remove Log class, partial migrate to slf4j

--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>sos-util</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-container</artifactId>
+			<version>${project.version}</version>
+		</dependency>
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
