remove unnecessary casts and imports

--- a/sos/sos-api/pom.xml
+++ b/sos/sos-api/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         </dependency>
 
