--- a/sos/exertlet/exertlet-platform/pom.xml
+++ b/sos/exertlet/exertlet-platform/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-multibindings</artifactId>
-            <version>4.0-beta4</version>
+            <version>${v.guice}</version>
         </dependency>
     </dependencies>
 </project>
