--- a/sos-providers/logger/logger-cfg/pom.xml
+++ b/sos-providers/logger/logger-cfg/pom.xml
@@ -13,6 +13,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>sos-platform</artifactId>
+        	<version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>logger-prv</artifactId>
         	<version>${project.version}</version>
         </dependency>
