--- a/sos-providers/logger/logger-cfg/src/main/resources/logger.config
+++ b/sos-providers/logger/logger-cfg/src/main/resources/logger.config
@@ -20,6 +20,7 @@ sorcer.core.provider.ServiceProvider {
 	description = "A remote Log Manager";
 	location = "Sorcersoft.com Lab";
 	publishedInterfaces = new Class[] { sorcer.core.RemoteLogger.class };
+    beanClasses = new Class[] { sorcer.core.provider.logger.RemoteLoggerManager.class };
 	// add service UI
 	entries = new Entry[] {
 		sorcer.core.provider.logger.ui.LoggerUIFactory.getMainUIDescriptor(),
