--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ script:
   - examples/test-examples.sh
 jdk:
   - oraclejdk7
+# whitelist
+branches:
+  only:
+    - master
 
 notifications:
   email:
