client for the remote logger, WiP

--- a/sos-providers/logger/pom.xml
+++ b/sos-providers/logger/pom.xml
@@ -15,5 +15,6 @@
 		<module>logger-prv</module>
 		<module>logger-sui</module>
         <module>logger-api</module>
+        <module>logger-platform</module>
     </modules>
 </project>
