platform: switch artifact resolver to rio resolver

--- a/sorcer-rio/sorcer-rio-start/pom.xml
+++ b/sorcer-rio/sorcer-rio-start/pom.xml
@@ -37,7 +37,7 @@
 
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-resolver</artifactId>
+            <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
