--- a/sos-providers/other-configs/fiddler-cfg/src/main/resources/fiddler.config
+++ b/sos-providers/other-configs/fiddler-cfg/src/main/resources/fiddler.config
@@ -15,5 +15,5 @@ com.sun.jini.fiddler {
     	new Comment(hostName),
     	new Comment(System.getProperty("user.name"))
 	};
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    // serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
