--- a/examples/ex1/ex1-cfg1/src/main/resources/whoIsIt1-prv.config
+++ b/examples/ex1/ex1-cfg1/src/main/resources/whoIsIt1-prv.config
@@ -34,7 +34,7 @@ sorcer.core.provider.ServiceProvider {
 		remoteContextLogging = true;
 		remoteProviderLogging = true;
 		
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+        // exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
         iconName="worker.jpg";
 }
