--- a/sos-providers/exerter/exerter-cfg/src/main/resources/exerter.config
+++ b/sos-providers/exerter/exerter-cfg/src/main/resources/exerter.config
@@ -25,7 +25,7 @@ sorcer.core.provider.ServiceProvider {
 		
 		// persist and reuse service ID
 		providerIdPersistent = false;
-		exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+		// exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 		
 		// service beans
 		beanClasses = new Class[] { sorcer.util.ServiceExerter.class };
