--- a/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
+++ b/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
@@ -188,8 +188,8 @@ org.dancres.blitz {
 
     // The exporter to use - see the JINI documentation
     //
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0),
-                         new ProxyTrustILFactory(null, null), false, true);
+    // serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0),
+    //                      new ProxyTrustILFactory(null, null), false, true);
 
     // Blitz provides a suitable default for all these but this is how you'd
     // configure them explicitly
