--- a/sos-providers/other-configs/mahalo-cfg/src/main/resources/mahalo.config
+++ b/sos-providers/other-configs/mahalo-cfg/src/main/resources/mahalo.config
@@ -17,5 +17,5 @@ com.sun.jini.mahalo {
     	new Comment(System.getProperty("user.name")),
     	new Comment("group: "+ Arrays.toString(initialLookupGroups))
 	};
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    // serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
