--- a/sos-providers/other-configs/norm-cfg/src/main/resources/norm.config
+++ b/sos-providers/other-configs/norm-cfg/src/main/resources/norm.config
@@ -17,5 +17,5 @@ com.sun.jini.norm {
     	new Comment(System.getProperty("user.name")),
     	new Comment("group:" + Arrays.toString(initialLookupGroups))
     };
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    // serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
