spacetaker WIP, errors

--- a/sos-providers/pom.xml
+++ b/sos-providers/pom.xml
@@ -23,6 +23,7 @@
 		<module>exertmonitor</module>
 		<module>dbp</module>
         <module>exerter</module>
+        <module>spacetaker</module>
     </modules>
 	
     <build>
