exert monitor refactoring, WIP, errors

--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>exertmonitor-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.sorcersoft.lockmgr</groupId>
 			<artifactId>lockmgr-api</artifactId>
 			<version>${v.lockmgr}</version>
