--- a/sos-providers/exertmonitor/exertmonitor-prv/pom.xml
+++ b/sos-providers/exertmonitor/exertmonitor-prv/pom.xml
@@ -21,6 +21,11 @@
         	<version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>exertmonitor-api</artifactId>
+        	<version>${project.version}</version>
+        </dependency>
+        <dependency>
 		    <groupId>com.sleepycat</groupId>
 		    <artifactId>je</artifactId>
 		    <version>${v.sleepycat}</version>
