--- a/sos-providers/logger/logger-api/pom.xml
+++ b/sos-providers/logger/logger-api/pom.xml
@@ -15,8 +15,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${v.logback}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
