refactoring exertions, WIP

--- a/sos-providers/exerter/pom.xml
+++ b/sos-providers/exerter/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>sos-providers</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>sos-providers</artifactId>
 		<version>1.0-M5-SNAPSHOT</version>
 	</parent>
 
@@ -13,5 +13,7 @@
 
 	<modules>
 		<module>exerter-cfg</module>
+        <module>exerter-prv</module>
+        <module>exerter-api</module>
 	</modules>
 </project>
