--- a/sos-providers/logger/logger-platform/pom.xml
+++ b/sos-providers/logger/logger-platform/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sorcer-junit</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
