--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -14,8 +14,7 @@
 
     <modules>
         <module>sorcer-api</module>
-        <module>sorcer-platform</module>
-        <module>sorcer-service-api</module>
+        <module>sorcer-spi</module>
         <module>sorcer-container</module>
         <module>sorcer-ui</module>
         <module>sos-platform</module>
