fix compilation errors; runtime errors remain

--- a/sos/exertlet/exertlet-platform/pom.xml
+++ b/sos/exertlet/exertlet-platform/pom.xml
@@ -36,9 +36,8 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>sorcer-spi</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
