--- a/sos/sorcer-container/pom.xml
+++ b/sos/sorcer-container/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-service-api</artifactId>
+            <artifactId>sorcer-spi</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
