--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -23,13 +23,11 @@
             <artifactId>dbp-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-<!--
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sorcer-container</artifactId>
+			<artifactId>sorcer-spi</artifactId>
 			<version>${project.version}</version>
 		</dependency>
--->
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
