--- a/sos/sorcer-spi/pom.xml
+++ b/sos/sorcer-spi/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-M5-SNAPSHOT</version>
     </parent>
 
-    <artifactId>sorcer-service-api</artifactId>
+    <artifactId>sorcer-spi</artifactId>
 
     <dependencies>
         <dependency>
@@ -25,6 +25,21 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 </project>
