--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -32,7 +32,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sorcer-service-api</artifactId>
+			<artifactId>sorcer-spi</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
