DynamicAccessors check lookupCache, WiP; enable caching in sorcer.env

--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -20,7 +20,7 @@ provider.space.name=Blitz Space
 worker.transactional.lease.time=50000
 
 # Service discovery/lookup
-lookup.cache.enabled=false
+lookup.cache.enabled=true
 # comma separated URLs
 #provider.lookup.locators=jini://localhost
 #   multicast and unicast discovery
