--- a/sos/sorcer-container/pom.xml
+++ b/sos/sorcer-container/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.1_3</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
