Removed dependency from sorcer-rio-start to sorcer-api - caused problems in designer

--- a/sorcer-rio/sorcer-rio-start/pom.xml
+++ b/sorcer-rio/sorcer-rio-start/pom.xml
@@ -34,12 +34,17 @@
             <artifactId>rio-start</artifactId>
             <version>${v.rio}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+<!--
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
