Fixed CalculatorUI in ex6-cfg-all, fixes in junit ArithmeticNoNetTest

--- a/examples/ex6/ex6-cfg-all/src/main/resources/beans-prv.config
+++ b/examples/ex6/ex6-cfg-all/src/main/resources/beans-prv.config
@@ -17,6 +17,10 @@ import sorcer.arithmetic.*;
 import sorcer.arithmetic.*;
 import sorcer.arithmetic.provider.*;
 import sorcer.arithmetic.provider.ContextManager;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
+import sorcer.ui.serviceui.*;
+import java.net.URL;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
@@ -31,7 +35,16 @@ sorcer.core.provider.ServiceProvider {
 			sorcer.arithmetic.provider.Divider.class };
 			
 		// add service UI
-		entries = new Entry[] { AdderImpl.getCalculatorDescriptor(),  
+		entries = new Entry[] {
+		                        UIDescriptorFactory.getUIDescriptor(
+                                    net.jini.lookup.ui.MainUI.ROLE,
+                                    new UIComponentFactory(
+                                        new URL[]{
+                                            new URL(SorcerEnv.getWebsterUrl() + "/" + Resolver.resolveRelative(Artifact.sorcer("ex6-sui")))
+                                        },
+                                        "sorcer.arithmetic.provider.ui.CalculatorUI"
+                                    )
+                                ),
 			new Comment("It uses sorcer.arithmetic.Arithmometer for bean implementation") };
 			
 		spaceEnabled = true;
