Fixed bug in Accessors when service is not a Sorcer Provider

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -126,6 +126,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>logger-platform</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>cataloger-sui</artifactId>
             <version>${project.version}</version>
         </dependency>
