--- a/tools/sorcer-provider/src/test/resources/projects/reference/ex0-cfg/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/reference/ex0-cfg/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>sos-platform</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-ui</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
     </dependencies>
 
     <build>
