--- a/tools/sorcer-provider/src/test/resources/projects/reference/ex0-sui/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/reference/ex0-sui/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>serviceui</artifactId>
             <version>${v.jini}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-ui</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
 	</dependencies>
 </project>
