move SPI classes to sorcer-spi

--- a/sos-providers/logger/logger-platform/pom.xml
+++ b/sos-providers/logger/logger-platform/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>sorcer-spi</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
