--- a/pom.xml
+++ b/pom.xml
@@ -298,6 +298,11 @@
                         </dependency>
                     </dependencies>
 				</plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -485,6 +490,11 @@
                         <version>1.7</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>2.2</version>
             </plugin>
 		</plugins>
 	</build>
