--- a/examples/account/account-cfg-1/src/main/resources/account.config
+++ b/examples/account/account-cfg-1/src/main/resources/account.config
@@ -31,7 +31,11 @@ sorcer.core.provider.ServiceProvider {
 			new Comment("Teaching example"),
 			new Location("3", "310", "Sorcersoft.com Lab")
 	};
-    //exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 	monitorEnabled = true;
 	spaceEnabled = true;
+}
+
+sorcer.core.service.ServiceBuilder {
+	type = sorcer.account.provider.AccountProvider.class;
+    //exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 }
