--- a/sos/sorcer-container/pom.xml
+++ b/sos/sorcer-container/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
-            <artifactId>cglib-nodep</artifactId>
+            <artifactId>cglib</artifactId>
             <version>2.1_3</version>
         </dependency>
         <dependency>
