Trying to fix compile problem on 1.6

--- a/sos/sorcer-ui/pom.xml
+++ b/sos/sorcer-ui/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>jsk-platform</artifactId>
             <version>${v.jini}</version>
         </dependency>
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-lib</artifactId>
+            <version>${v.jini}</version>
+        </dependency>
     </dependencies>
 
 </project>
