river-3.0-M1, add custard-apple to Launcher

--- a/configs/blitz/configs/start-blitz.config
+++ b/configs/blitz/configs/start-blitz.config
@@ -23,8 +23,8 @@ com.sun.jini.start {
             Booter.resolveCodebase(new String[]{
                 "org.sorcersoft.blitz:blitz-common",
                 "org.sorcersoft.blitz:blitz-proxy",
-            	"net.jini:jsk-dl",
-                "org.apache.river:outrigger-dl",
+            	"com.sorcersoft.river:jsk-dl",
+                "com.sorcersoft.river:outrigger-dl",
  			    "org.sorcersoft.blitz:blitz-ui"
             }),
             policy,
@@ -33,11 +33,11 @@ com.sun.jini.start {
                 "org.sorcersoft.blitz:blitz-service",
                 "org.sorcersoft.blitz:blitz-proxy",
             	"org.sorcersoft.blitz:blitz-ui",
-            	"org.apache.river:outrigger-dl",
+            	"com.sorcersoft.river:outrigger-dl",
             	"com.sleepycat:je",
-            	"net.jini.lookup:serviceui",
-            	"net.jini:jsk-lib",
-            	"net.jini:jsk-platform"
+            	"com.sorcersoft.river:serviceui",
+            	"com.sorcersoft.river:jsk-lib",
+            	"com.sorcersoft.river:jsk-platform"
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	home + "/configs/blitz/configs/blitz.config"
