--- a/configs/blitz/configs/start-lockmgr.config
+++ b/configs/blitz/configs/start-lockmgr.config
@@ -24,8 +24,8 @@ com.sun.jini.start {
                 "org.sorcersoft.sorcer:locker",
                 "org.jgroups:jgroups:2.12.1.Final",
                 "org.dancres.blitz:blitzui",
-                "org.apache.river:outrigger-dl",
-                "net.jini:jsk-platform"
+                "com.sorcersoft.river:outrigger-dl",
+                "com.sorcersoft.river:jsk-platform"
             }),
             "org.dancres.blitz.jini.lockmgr.ServerImpl",
             home + "/configs/blitz/configs/lockmgr.config"
