--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -39,17 +39,17 @@ load mvn://org.rioproject:rio-api
 load mvn://org.rioproject:rio-lib
 load mvn://commons-io:commons-io:2.4
 load mvn://org.rioproject:rio-platform
-load mvn://net.jini:jsk-platform
+load mvn://com.sorcersoft.river:jsk-platform
 
 #load mvn://org.rioproject.resolver:resolver-api
 #load mvn://org.sorcersoft.sorcer:sorcer-resolver
-#load mvn://net.jini.lookup:serviceui
+#load mvn://com.sorcersoft.river:serviceui
 #load mvn://org.sorcersoft.sorcer:sos-platform
 #load mvn://org.sorcersoft.sorcer:sos-webster
 #load mvn://org.sorcersoft.sorcer:sorcer-api
 #load mvn://org.sorcersoft.sorcer:dbp-api
-#load mvn://net.jini:jsk-dl
-#load mvn://net.jini:jsk-lib
+#load mvn://com.sorcersoft.river:jsk-dl
+#load mvn://com.sorcersoft.river:jsk-lib
 #load mvn://org.sorcersoft.sorcer:sos-util
 #load mvn://org.rioproject.resolver:resolver-api
 #load mvn://org.codehaus.groovy:groovy-all
