--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -562,7 +562,7 @@
             <version>${v.junit}</version>
         </dependency>
         <dependency>
-            <groupId>net.jini.lookup</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>serviceui</artifactId>
             <version>${v.jini}</version>
         </dependency>
