--- a/examples/ex1/ex1-prv/pom.xml
+++ b/examples/ex1/ex1-prv/pom.xml
@@ -35,7 +35,7 @@
 		</dependency>
 <!--
         <dependency>
-            <groupId>org.apache.river</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
             <scope>runtime</scope>
