--- a/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
+++ b/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
@@ -26,7 +26,7 @@ sorcer.core.provider.ServiceProvider  {
 						Booter.artifactURL(Artifact.sorcer("cataloger-sui")),
 						Booter.artifactURL(Artifact.sorcer("sorcer-ui")),
 						Booter.artifactURL(Artifact.sorcer("sos-exertlet-sui")),
-						Booter.artifactURL(ArtifactCoordinates.coords("net.jini.lookup:serviceui"))
+						Booter.artifactURL(ArtifactCoordinates.coords("com.sorcersoft.river:serviceui"))
 					},
 					"sorcer.core.provider.cataloger.ui.CatalogerUI",
 					"Catalog Browser",
