--- a/sos-providers/jobber/jobber-cfg/src/main/resources/config/services.config
+++ b/sos-providers/jobber/jobber-cfg/src/main/resources/config/services.config
@@ -19,7 +19,7 @@ com.sun.jini.start {
     standardProviderCodebase = Booter.resolveCodebase(new String[]{
         "org.sorcersoft.sorcer:sos-platform",
         "org.sorcersoft.sorcer:sos-exertlet-sui",
-        "net.jini.lookup:serviceui"
+        "com.sorcersoft.river:serviceui"
     });
 
     serviceDescriptors = new ServiceDescriptor[] {
