--- a/sos-providers/other-configs/blitz-cfg/pom.xml
+++ b/sos-providers/other-configs/blitz-cfg/pom.xml
@@ -44,7 +44,7 @@
         	<version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.river</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>mahalo-dl</artifactId>
             <version>${v.jini}</version>
         </dependency>
