--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -29,11 +29,11 @@
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
-            <groupId>net.jini</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>jsk-platform</artifactId>
         </dependency>
         <dependency>
-            <groupId>net.jini</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
         </dependency>
