--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
@@ -23,7 +23,7 @@
             <version>${v.sorcer}</version>
         </dependency>
         <dependency>
-            <groupId>net.jini.lookup</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>serviceui</artifactId>
             <version>${v.jini}</version>
         </dependency>
