--- a/sos-providers/cataloger/cataloger-sui/pom.xml
+++ b/sos-providers/cataloger/cataloger-sui/pom.xml
@@ -19,7 +19,7 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.jini</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>jsk-platform</artifactId>
         </dependency>
         <dependency>
