--- a/sos-providers/dbp/dbp-api/pom.xml
+++ b/sos-providers/dbp/dbp-api/pom.xml
@@ -20,7 +20,7 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.jini</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>jsk-platform</artifactId>
         </dependency>
     </dependencies>
