--- a/sos-providers/other-configs/mahalo-cfg/pom.xml
+++ b/sos-providers/other-configs/mahalo-cfg/pom.xml
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.river</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>mahalo</artifactId>
         	<version>${v.jini}</version>
         </dependency>
