--- a/sos/commons-prv/pom.xml
+++ b/sos/commons-prv/pom.xml
@@ -17,7 +17,7 @@
 			<artifactId>sos-platform</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.jini</groupId>
+			<groupId>com.sorcersoft.river</groupId>
 			<artifactId>jsk-lib</artifactId>
 			<version>${v.jini}</version>
 			<scope>provided</scope>
