--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -92,7 +92,7 @@
 										<entry>${project.groupId}:commons-req:${project.version}</entry>
 										<entry>${project.groupId}:${project.artifactId}:${project.version}</entry>
                                         <entry>${project.groupId}:dbp-api:${project.version}</entry>
-										<entry>net.jini.lookup:serviceui:${v.jini}</entry>
+										<entry>com.sorcersoft.river:serviceui:${v.jini}</entry>
 										<entry>junit:junit:${v.junit}</entry>
 										<entry>org.slf4j:slf4j-simple:${v.slf4j}</entry>
 										<entry>com.sleepycat:je:${v.sleepycat}</entry>
