--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -24,7 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <v.sorcer>1.0-M5-SNAPSHOT</v.sorcer>
-        <v.jini>2.2.2</v.jini>
+        <v.jini>3.0-M1</v.jini>
         <v.blitz>2.3</v.blitz>
         <v.sleepycat>4.0.92</v.sleepycat>
         <v.rio>5.0-M4-S6</v.rio>
@@ -70,7 +70,7 @@
                 <version>${v.groovy}</version>
             </dependency>
             <dependency>
-                <groupId>net.jini</groupId>
+                <groupId>com.sorcersoft.river</groupId>
                 <artifactId>jsk-platform</artifactId>
                 <version>${v.jini}</version>
             </dependency>
