--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -21,11 +21,11 @@
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>org.apache.river</groupId>
+					<groupId>com.sorcersoft.river</groupId>
 					<artifactId>start</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>net.jini</groupId>
+					<groupId>com.sorcersoft.river</groupId>
 					<artifactId>jsk-platform</artifactId>
 				</exclusion>
 				<exclusion>
@@ -45,7 +45,7 @@
 					<artifactId>rio-start</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>net.jini.lookup</groupId>
+					<groupId>com.sorcersoft.river</groupId>
 					<artifactId>serviceui</artifactId>
 				</exclusion>
 			</exclusions>
@@ -76,7 +76,7 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.river</groupId>
+			<groupId>com.sorcersoft.river</groupId>
 			<artifactId>reggie</artifactId>
 			<version>${v.jini}</version>
 		</dependency>
