--- a/tools/sorcer-provider/src/test/resources/projects/reference/ex0-sui/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/reference/ex0-sui/pom.xml
@@ -17,7 +17,7 @@
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
-            <groupId>net.jini.lookup</groupId>
+            <groupId>com.sorcersoft.river</groupId>
             <artifactId>serviceui</artifactId>
             <version>${v.jini}</version>
         </dependency>
