--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -36,6 +36,7 @@ load mvn://org.sorcersoft.sorcer:sos-api
 load mvn://org.sorcersoft.sorcer:sos-netlet
 load mvn://org.sorcersoft.sorcer:sos-shell
 load mvn://org.rioproject:rio-api
+load mvn://org.rioproject:rio-lib
 load mvn://commons-io:commons-io:2.4
 load mvn://org.rioproject:rio-platform
 load mvn://net.jini:jsk-platform
