--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -22,7 +22,7 @@ sorcer.tools.codeserver {
     //
 
     //provider.webster.port
-    websterPort = Booter.getWebsterPort(); 
+    websterPort = Booter.getWebsterPort();
     //websterPort = 0;
     //provider.webster
     websterAddress = Booter.getWebsterInterface();
@@ -47,4 +47,10 @@ sorcer.tools.codeserver {
 	    "-startPort", "" + startPort, 
 	    "-endPort", "" + endPort, 
 	    "-isDaemon", "" + isDaemon };
+}
+
+sorcer.core.service.ServiceBuilder{
+	type = sorcer.tools.webster.WebsterStarter.class;
+	export = false;
+	register = false;
 }
